--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,26 @@
+/* The Container */
+.container-fluid{overflow: hidden !important;}
+/* Header, Paragraf, Anchor Desktop */
+  h1, h2, h3, h4, h5, h6{font-family: "Montserrat Regular";}
+  h1 span,h2 span,h3 span,h4 span,h5 span,h6 span{font-family: "Montserrat Bold";}
+  h1{font-size: 45px !important;}
+  h2{font-size: 40px !important;}
+  h3{font-size: 36px !important;}
+  h4{font-size: 21px !important;}
+  h5{font-size: 18px !important;}
+  p,a,label,th,td,li{
+    font-family: "Montserrat Regular";
+    font-size :  14px !important;
+    line-height : 24px;
+  }
+  @media screen and (max-width: 846px) {
+    /* Header, Paragraf, Anchor Mobile */
+    h1{font-size: 35px !important;}
+    h2{font-size: 30px !important;}
+    h4{font-size: 16px !important;}
+    h5{font-size: 14px !important;}
+    p{font-size: 12px !important;}
+  }
 /* Form */
   .form-wrapper{
     padding: 10%;
@@ -728,6 +751,15 @@
     position: absolute;
     top: 0;
   }
+  .container1{
+      overflow: auto;
+      margin-top: 32px;
+      margin-left: 0px;
+      padding-right: 40%;
+      width: 101%;
+      height: 35vh;
+  }
+  .container1 p{color: #fff;}
   /* Section Template */
   .home-template .box{
     width: 100%;
