update template 1 dan 2

--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -25,8 +25,42 @@
                 <div class="col-lg-3 pl-lg-5">
                     <img class="img-fluid" src="images/logo-template-2-02.png">
                 </div>
-                <div class="col-lg-9 pr-lg-5 text-right">
+                <div class="col-lg-9 pr-lg-5 text-right d-none d-lg-block">
                    <ul class="list-unstyled">
+                        <li class="mx-4">
+                            <a href="#our-story">
+                                HOW WE MET
+                            </a>
+                        </li>
+                        <li class="mx-4">
+                            <a href="#celebrate">
+                                CELEBRATION
+                            </a>
+                        </li>
+                        <li class="mx-4">
+                            <a href="#gallery">
+                                GALLERY
+                            </a>
+                        </li>
+                        <li class="mx-4">
+                            <a href="#rsvp">
+                                RSVP
+                            </a>
+                        </li>
+                   </ul>
+                </div>
+                <div class="menu-mobile d-lg-none">
+                    <h3 class="text-dark-blue">
+                        <i class="fa fa-bars"></i>
+                    </h3>
+                </div>
+                <div class="side-nav d-lg-none">
+                        <div class="close-div text-right p-3">
+                            <h3>
+                                <i class="fa fa-times text-white" aria-hidden="true"></i>
+                            </h3>
+                        </div>
+                    <ul class="list-unstyled">
                         <li class="mx-4">
                             <a href="#our-story">
                                 HOW WE MET
@@ -74,7 +108,7 @@
                 </h2>
             </div>
             <div class="col-lg-4 offset-lg-3 py-lg-5">
-                <p class="text-white mt-lg-4">
+                <p class="text-white mt-lg-4 d-none d-lg-block">
                     There’s a lonely girl upon the<br>
                     hallway and far away is a man<br>
                     who always have been wishing<br>
@@ -82,11 +116,20 @@
                     time. Until he approach her and<br>
                     his first word was:
                 </p>
+                <p class="text-white my-4 d-lg-none">
+                    There’s a lonely girl upon the
+                    hallway and far away is a man
+                    who always have been wishing
+                    to know her for a very long
+                    time. Until he approach her and
+                    his first word was:
+                </p>
             </div>
         </div>
         <div class="row">
             <div class="col-lg-12 px-0">
-                <img class="img-fluid w-100" src="images/about-us-04.jpg">
+                <img class="img-fluid w-100 d-none d-lg-block" src="images/about-us-04.jpg">
+                <img class="img-fluid w-100 d-lg-none" src="images/mobile-about-us-04-02.jpg">
             </div>
         </div>
     </div>
@@ -95,17 +138,25 @@
             <div class="col-lg-6 p-lg-5">
                 <img class="img-fluid" src="images/inseparable-05.png">
             </div>
-            <div class="col-lg-6 py-lg-5">
-                <h2 class="text-grayish-blue my-lg-5">
+            <div class="col-lg-6 py-5">
+                <h2 class="text-grayish-blue my-lg-5 mt-5">
                     Inseparable<br>
                     Ever Since,
                 </h2>
-                <p class="text-white offset-lg-2">
+                <p class="text-white offset-lg-2 d-none d-lg-block">
                     There’s a lonely girl upon the<br>
                     hallway and far away is a man<br>
                     who always have been wishing<br>
                     to know her for a very long<br>
                     time. Until he approach her and<br>
+                    his first word was:
+                </p>
+                <p class="text-white offset-lg-2 d-lg-none mt-5">
+                    There’s a lonely girl upon the
+                    hallway and far away is a man
+                    who always have been wishing
+                    to know her for a very long
+                    time. Until he approach her and
                     his first word was:
                 </p>
             </div>
@@ -114,12 +165,16 @@
     <div class="container-fluid will-you">
         <div class="row">
             <div class="col-lg-12 px-0">
-                <img class="img-fluid w-100" src="images/image-3-07.jpg">
+                <img class="img-fluid w-100 d-none d-lg-block" src="images/image-3-07.jpg">
+                <img class="img-fluid w-100 d-lg-none" src="images/image-3-mobile-03.jpg">
                 <div class="content">
                     <h2 class="text-white">
                         Will you marry me?
                     </h2>
-                    <p class="text-white">
+                    <p class="text-white d-none d-lg-block">
+                        He said nervously
+                    </p>
+                    <p class="text-white text-right d-lg-none">
                         He said nervously
                     </p>
                 </div>
@@ -133,18 +188,18 @@
     </div>
     <div id="celebrate" class="container-fluid bg-celebrate">
         <div class="row">
-            <div class="col-lg-4 offset-lg-1 py-lg-5">
+            <div class="col-lg-4 offset-lg-1 py-lg-5 order-4 order-lg-1 col-12">
                 <img class="image-celebrate img-fluid mt-5" src="images/image-celebrate-03.png">
             </div>
-            <div class="col-lg-3 py-lg-5 my-lg-5 section-left">
+            <div class="col-lg-3 py-lg-5 my-lg-5 section-left order-1 order-lg-2 col-12">
                 <p class="text-white mt-lg-5">
                     Countdown | <span id="days"></span> : <span id="hours"></span> : <span id="minutes"></span> : <span id="seconds"></span>
                 </p>
-                <h2 class="text-light-brown">
+                <h2 class="text-light-brown my-5 my-lg-0">
                     Celebrate<br>
                     with Us!
                 </h2>
-                <p class="text-white font-weight-bold my-lg-4">
+                <p class="text-white font-weight-bold my-4">
                     I SAID YES.
                 </p>
                 <p class="text-white">
@@ -153,7 +208,7 @@
                     in our journey of a lifetime.<br>
                 </p>
             </div>
-            <div class="col-lg-3 py-lg-5 my-lg-5">
+            <div class="col-lg-3 py-lg-5 my-lg-5 order-2 order-lg-3 d-none d-lg-block">
                 <p class="text-white mt-lg-5 pt-lg-5 mb-lg-0">
                     <br>
                     <strong>PEMBERKATAN</strong><br>
@@ -171,18 +226,34 @@
                     11:00 - 12:00 PM
                 </p>
             </div>
+            <div class="col-6 d-lg-none order-2 pr-0">
+                <p class="text-white">
+                    <br>
+                    <strong>PEMBERKATAN</strong><br>
+                    Dimana tempatnya,<br>
+                    09:00 - 10:00 AM
+                </p>
+            </div>
+            <div class="col-6 d-lg-none order-3 pl-2">
+                <p class="text-white">
+                    <br>
+                    <strong>WEDDING PARTY</strong><br>
+                    Dimana Tempatnya,<br>
+                    11:00 - 12:00 PM
+                </p>
+            </div>
         </div>
     </div>
     <div id="gallery" class="container-fluid gallery-section">
         <div class="row">
             <div class="col-lg-6 offset-lg-1">
-                <h2 class="text-dark-blue">
+                <h2 class="text-dark-blue my-lg-0 my-5">
                     Our Moments,<br>
                     Captured.
                 </h2>
             </div>
             <div class="col-lg-3 offset-lg-1 pr-lg-5">
-                <p class="text-grayish-blue mt-lg-3 float-right">
+                <p class="text-grayish-blue mt-lg-3 float-lg-right d-none d-lg-block">
                 There’s a lonely girl upon the<br>
                 hallway and far away is a man<br>
                 who always have been wishing<br>
@@ -191,9 +262,18 @@
                 his first word was:<br>
                 <br>
                 </p>
+                <p class="text-grayish-blue mt-3 float-lg-right d-lg-none">
+                There’s a lonely girl upon the
+                hallway and far away is a man
+                who always have been wishing
+                to know her for a very long
+                time. Until he approach her and
+                his first word was:
+                <br>
+                </p>
             </div>
         </div>
-        <div class="row offset-lg-1 pb-lg-5">
+        <div class="row offset-lg-1 pb-lg-5 d-none d-lg-flex">
             <div class="p-lg-3">
                 <img class="img-fluid" src="images/image-item-gallery-03.jpg">
             </div>
@@ -219,11 +299,39 @@
                 <img class="img-fluid" src="images/image-item-gallery-10.jpg">
             </div>
         </div>
+        <div class="row d-lg-none">
+            <div class="carousel-gallery owl-theme">
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-03.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-04.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-05.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-06.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-07.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-08.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-09.jpg">
+                </div>
+                <div class="item">
+                    <img class="img-fluid" src="images/image-item-gallery-10.jpg">
+                </div>
+            </div>
+        </div>
     </div>
     <div id="rsvp" class="container-fluid rsvp-section">
         <div class="row py-lg-5">
             <div class="col-lg-12 text-center">
-                <h2 class="text-gray my-lg-5">
+                <h2 class="text-gray my-5">
                     Are you coming?
                 </h2>
             </div>
@@ -231,36 +339,36 @@
         <div class="mx-auto w-lg-38p">
             <div class="col-lg-12 px-lg-0">
                 <div class="form-group row">
-                    <label class="col-lg-5 name-text pt-2">ARE YOU ATTENDING?</label>
-                    <div class="col-lg-7 pl-lg-0">
+                    <label class="col-lg-5 col-6 px-0 name-text pt-lg-2">ARE YOU ATTENDING?</label>
+                    <div class="col-lg-7 col-6 px-0 pl-0">
                       <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-lg-5 name-text pt-2">FULL NAME</label>
-                    <div class="col-lg-7 pl-lg-0">
+                    <label class="col-lg-5 col-6 px-0 name-text pt-lg-2">FULL NAME</label>
+                    <div class="col-lg-7 col-6 px-0 pl-0">
                       <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-lg-5 name-text pt-2">EMAIL</label>
-                    <div class="col-lg-7 pl-lg-0">
+                    <label class="col-lg-5 col-6 px-0 name-text pt-lg-2">EMAIL</label>
+                    <div class="col-lg-7 col-6 px-0 pl-0">
                       <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-lg-5 name-text pt-2">PHONE NUMBER</label>
-                    <div class="col-lg-7 pl-lg-0">
+                    <label class="col-lg-5 col-6 px-0 name-text pt-lg-2">PHONE NUMBER</label>
+                    <div class="col-lg-7 col-6 px-0 pl-0">
                       <input type="text" class="form-control">
                     </div>
                 </div>
                 <div class="form-group row">
-                    <label class="col-lg-5 name-text pt-2">ADDITIONAL GUEST</label>
-                    <div class="col-lg-7 pl-lg-0">
+                    <label class="col-lg-5 col-6 px-0 name-text pt-lg-2">ADDITIONAL GUEST</label>
+                    <div class="col-lg-7 col-6 px-0 pl-0">
                       <input type="text" class="form-control">
                     </div>
                 </div>
-                <div class="form-group py-lg-5 mb-0">
+                <div class="form-group py-5 mb-0">
                     <div class="col-lg-12 text-center pb-lg-5">
                         <a class="button-submit" href="#">SUBMIT</a>
                     </div>
