--- a/templates/template_wedding_2/style-wedding-2.css
+++ b/templates/template_wedding_2/style-wedding-2.css
@@ -139,15 +139,96 @@
 		object-fit: cover;
 		height: 100vh !important;
 	}
+	.carousel-gallery .owl-next, .carousel-gallery .owl-prev{
+		color: #C7B198 !important;
+	}
+	.carousel-gallery .owl-next{
+		right: 0;
+	}
+	.carousel-gallery .owl-prev{
+		left: 0;
+	}
 	@media screen and (max-width: 846px) {
+		.col, .col-1, .col-10, .col-11, .col-12, .col-2, .col-3, .col-4, .col-5, .col-6, .col-7, .col-8, .col-9, .col-auto, .col-lg, .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-auto, .col-md, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-auto, .col-sm, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-auto, .col-xl, .col-xl-1, .col-xl-10, .col-xl-11, .col-xl-12, .col-xl-2, .col-xl-3, .col-xl-4, .col-xl-5, .col-xl-6, .col-xl-7, .col-xl-8, .col-xl-9, .col-xl-auto{
+			padding-left: 30px !important;
+			padding-right: 30px !important;
+		}
 		.content-header-home{
 			width: 100%;
 			text-align: center;
 		}
 		h2 {
-    		font-size: 50px !important;
+    		font-size: 45px !important;
     	}
     	p, a, label, th, td, li, input{
-    		font-size: 11pt;
+    		font-size: 12pt;
+    		line-height: 30px;
     	}
+    	.inseparable-section{
+    		background-image: none;
+    	}
+    	.will-you .content{
+    		right: auto;
+			left: 30px;
+			width: 80%;
+			top: auto;
+			bottom: 6%;
+    	}
+    	.bg-celebrate{
+    		background-image: none;
+    	}
+    	.carousel-gallery{
+    		padding: 0 40px 40px;
+    	}
+    	.rsvp-section{
+    		background-image: none;
+    	}
+    	.rsvp-section .w-lg-38p{
+    		width: 100%;
+    	}
+    	.rsvp-section .form-control, .rsvp-section label{
+    		font-size: 12px;
+    	}
+    	.rsvp-section .form-control{
+    		padding-top: 0;
+    		padding-bottom: 0;
+    	}
+    	.footer p{
+    		font-size: 7pt;
+    	}
+    	.nav-wedding-2 img{
+    		margin: auto;
+			display: block;
+			margin-top: 30px;
+    	}
+    	.menu-mobile{
+    		position: absolute;
+			right: 20px;
+			top: 56px;
+			transform: translate(-50%);
+    	}
+    	.nav-wedding-2 ul {
+    		margin-top: 4em;
+		}
+    	.nav-wedding-2 ul li {
+    		display: block;
+    		text-align: center;
+    		margin: 20px 0;
+		}
+		.side-nav{
+			width: 100%;
+			height: 100vh;
+			background: #284c5b;
+			position: absolute;
+			top: 0;
+			left: -100%;
+			transition: all .5s;
+		}
+		.side-nav.active{
+			left: 0;
+		}
+		.nav-wedding-2 ul li a {
+   			color: #fff;
+   			font-size: 17px;
+		}
 	}
