karena peradaban takan pernah mati

--- a/templates/template_wedding_1/index.html
+++ b/templates/template_wedding_1/index.html
@@ -237,6 +237,9 @@
                 </h3>
                 <p class="text-gray">
                     <span class="font-weight-bold">
+                        23 September 2020
+                    </span><br>
+                    <span class="font-weight-bold">
                         09.30 - 10.00 am
                     </span><br>
                     Join us in a holy matrimony of blabla<br>
@@ -252,6 +255,9 @@
                     CATHEDRAL CHURCH
                 </h3>
                 <p class="text-gray">
+                    <span class="font-weight-bold">
+                        23 September 2020
+                    </span><br>
                     <span class="font-weight-bold">
                         09.30 - 10.00 am
                     </span><br>
@@ -288,6 +294,9 @@
                         </h3>
                         <p class="text-gray mb-4">
                             <span class="font-weight-bold">
+                                23 September 2020
+                            </span><br>
+                            <span class="font-weight-bold">
                                 09.30 - 10.00 am
                             </span><br>
                             Join us in a holy matrimony of blabla<br>
@@ -303,6 +312,9 @@
                             CATHEDRAL CHURCH
                         </h3>
                         <p class="text-gray mb-4">
+                            <span class="font-weight-bold">
+                                23 September 2020
+                            </span><br>
                             <span class="font-weight-bold">
                                 09.30 - 10.00 am
                             </span><br>
@@ -410,19 +422,47 @@
                         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="ADDITIONAL GUEST">
                     </div>
                 </form>
-                <a href="#" class="button-border-cyan float-right my-lg-4 d-none d-lg-block">SUBMIT</a>
-                <a href="#" class="button-cyan float-right my-lg-4 d-lg-none">SUBMIT</a>
+                <a href="#"  data-toggle="modal" data-target="#exampleModal" class="button-border-cyan float-right my-lg-4 d-none d-lg-block">SUBMIT</a>
+                <a href="#"  data-toggle="modal" data-target="#exampleModal" class="button-cyan float-right my-lg-4 d-lg-none">SUBMIT</a>
             </div>
         </div>
     </div>
     <div class="container-fluid bg-cyan footer">
         <div class="row">
-            <div class="col-lg-12 text-center py-lg-2">
-                <p class="mb-0 text-white">
+            <div class="col-lg-10 text-left pl-lg-5 order-lg-1 order-2">
+                <p class="mb-0 text-white mt-lg-4">
                     All Right Reserved © This website is made by <span class="font-weight-bold">Reservasi Dulu</span>
                 </p>
             </div>
+            <div class="col-lg-2 order-lg-2 order-1 text-center">
+                 <a class="button-border-white my-3 d-inline-block" href="#">Create a Site</a>
+            </div>
         </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content pt-5  thank-you">
+            <div class="col-lg-12 py-5">
+            <p class="text-gray font-weight-bold text-center mb-0">
+                THANK YOU FOR SUBMITTING YOUR RSVP
+            </p>
+            <h1 class="text-yellow text-center mb-4">
+                WE’LL LOOK FORWARD<br>
+                TO SEE YOU!
+            </h1>
+            <img class="mx-auto d-block my-4" src="images/horizontal-line-pop-up-08.png">
+            <p class="text-gray w-lg-30p mx-auto text-center">
+                We have save your seat and sent you an email for your rsvp bookings. We really appreciate you participating in our very special day.
+            </p>
+            <div class="text-center pt-4">
+                <a href="#" class="button-border-cyan mx-auto" data-dismiss="modal">
+                    CLOSE
+                </a>
+            </div>
+            </div>
+        </div>
+      </div>
     </div>
     <!-- Features JS -->
     <script type="text/javascript" src="../../features/animatecss/wow.min.js"></script>
