--- a/templates/template_wedding_2/index.html
+++ b/templates/template_wedding_2/index.html
@@ -24,6 +24,9 @@
             <div class="row">
                 <div class="col-lg-3 pl-lg-5">
                     <img class="img-fluid" src="images/logo-template-2-02.png">
+                    <span class="text-gray ml-lg-3">
+                        PETER & MARY
+                    </span>
                 </div>
                 <div class="col-lg-9 pr-lg-5 text-right d-none d-lg-block">
                    <ul class="list-unstyled">
@@ -199,7 +202,7 @@
                     Celebrate<br>
                     with Us!
                 </h2>
-                <p class="text-white font-weight-bold my-4">
+                <p class="text-white font-weight-bold my-lg-5 my-4">
                     I SAID YES.
                 </p>
                 <p class="text-white">
@@ -212,6 +215,7 @@
                 <p class="text-white mt-lg-5 pt-lg-5 mb-lg-0">
                     <br>
                     <strong>PEMBERKATAN</strong><br>
+                    <strong>23 September 2020</strong><br>
                     <br>
                     Dimana tempatnya,<br>
                     <br>
@@ -220,6 +224,7 @@
                 <p class="text-white">
                     <br>
                     <strong>WEDDING PARTY</strong><br>
+                    <strong>23 September 2020</strong><br>
                     <br>
                     Dimana Tempatnya,<br>
                     <br>
@@ -230,6 +235,7 @@
                 <p class="text-white">
                     <br>
                     <strong>PEMBERKATAN</strong><br>
+                    <strong>23 September 2020</strong>
                     Dimana tempatnya,<br>
                     09:00 - 10:00 AM
                 </p>
@@ -238,6 +244,7 @@
                 <p class="text-white">
                     <br>
                     <strong>WEDDING PARTY</strong><br>
+                    <strong>23 September 2020</strong>
                     Dimana Tempatnya,<br>
                     11:00 - 12:00 PM
                 </p>
@@ -370,7 +377,7 @@
                 </div>
                 <div class="form-group py-5 mb-0">
                     <div class="col-lg-12 text-center pb-lg-5">
-                        <a class="button-submit" href="#">SUBMIT</a>
+                        <a class="button-submit" href="#" data-toggle="modal" data-target="#exampleModal">SUBMIT</a>
                     </div>
                 </div>
             </div>
@@ -378,12 +385,37 @@
     </div>
     <div class="container-fluid bg-grayish-blue footer">
         <div class="row">
-            <div class="col-lg-12 text-center py-lg-4">
+            <div class="col-lg-10 text-left py-lg-4 pl-lg-5">
                 <p class="mb-0 text-white">
                     All Right Reserved © This website is made by <span class="font-weight-bold">Reservasi Dulu</span>
                 </p>
             </div>
+            <div class="col-lg-2">
+                <a class="button-border-white my-3 d-inline-block" href="#">Create a Site</a>
+            </div>
         </div>
+    </div>
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content pt-5 bg-blue">
+            <div class="col-lg-12 pb-5">
+                <div class="close-button">
+                    <img data-dismiss="modal" src="images/close-button-08.png">
+                </div>
+                <img class="mx-auto d-block my-4" src="images/thank-you-label-07.png">
+                <p class="text-white w-lg-30p mx-auto text-center">
+                    <strong>
+                        For Coming to Our Wedding<br>
+                    </strong>
+                    <br>
+                    We will safe your seat and we’ll look forward for your presence.<br>
+                    <br>
+                        See you There!
+                </p>
+            </div>
+        </div>
+      </div>
     </div>
     <!-- Features JS -->
     <script type="text/javascript" src="../../features/animatecss/wow.min.js"></script>
