--- a/templates/template_wedding_1/style-wedding-1.css
+++ b/templates/template_wedding_1/style-wedding-1.css
@@ -4,12 +4,12 @@ h1, h2, h3, h4, h5, h6{font-family: "Oswald Medium";}
 }
   h1 span,h2 span,h3 span,h4 span,h5 span,h6 span{font-family: "Oswald Medium";}
   p,a,label,th,td,li, input{
-    font-family: "Gilroy Light";
+    font-family: "Montserrat Regular";
     font-size :  12pt;
     line-height : 24px;
   }
   .font-gilroy{
-    font-family: "Gilroy Light";
+    font-family: "Montserrat Regular";
   }
   .font-oswald-extralight{
     font-family: "Oswald ExtraLight";
@@ -247,6 +247,15 @@ h1, h2, h3, h4, h5, h6{font-family: "Oswald Medium";}
     font-size: 40px;
     color: #fff;
   }
+  .modal h1{
+    font-size: 85px;
+    line-height: 80px;
+  }
+  .thank-you{
+    background-image: url(images/bg-pop-up-02.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
   @media screen and (max-width: 846px) {
     p, a, label, th, td, li, input{
       font-size: 11pt;
@@ -342,5 +351,16 @@ h1, h2, h3, h4, h5, h6{font-family: "Oswald Medium";}
       border-radius: 25px;
       letter-spacing: 0.8px;
       box-shadow: 0px 4px 2px 0px rgba(0,0,0,0.1);
+    }
+    .modal h1{
+      font-size: 35px;
+      line-height: 40px;
+      margin-top: 7px;
+    }
+    .modal img{
+      width: 70%;
+    }
+    .modal .w-lg-30p{
+      width: 90% !important;
     }
   }
