--- a/templates/template_birthday_2/wishlist.html
+++ b/templates/template_birthday_2/wishlist.html
@@ -20,11 +20,11 @@
 </head>
 <body>
     <div class="container-fluid nav-birthday-2">
-        <div class="row">
+        <div class="row d-none d-lg-flex">
             <div class="col-lg-5">
                 
             </div>
-            <div class="col-lg-7 py-lg-4 text-right">
+            <div class="col-lg-7 py-lg-4 text-right d-none d-lg-block">
                <ul class="list-unstyled d-inline">
                    <li>
                        <a href="#">
@@ -32,35 +32,75 @@
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#gallery">
                             ABOUT
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#date">
                             DATE & PLACE
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#rsvp-section">
                             RSVP
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="wishlist.html">
                             WISH LIST
                        </a>
                    </li>
                </ul> 
             </div>
         </div>
+        <div class="d-lg-none">
+          <div class="col-lg-11">
+            <h3 class="text-gray text-right mt-1">
+                <i class="fa fa-bars"></i>
+            </h3>
+          </div>
+          <div class="side-nav">
+                        <div class="close-div text-right p-3">
+                          <h3 class="text-gray">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </h3>
+                        </div>
+                        <ul class="list-unstyled">
+                        <li>
+                       <a href="#">
+                            HOME
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#gallery">
+                            ABOUT
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#date">
+                            DATE & PLACE
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#rsvp-section">
+                            RSVP
+                       </a>
+                   </li>
+                   <li>
+                       <a href="wishlist.html">
+                            WISH LIST
+                       </a>
+                   </li>
+                    </div>
+        </div>
     </div>
     <div class="container-fluid header-section-wishlist pt-lg-5">
         <div class="row">
-            <div class="col-lg-4 offset-lg-1 pr-lg-0 pt-lg-5">
+            <div class="col-lg-4 offset-lg-1 pr-lg-0 pt-lg-5 pl-0">
                 <img class="img-fluid float-right" src="images/image-wishlist-08.jpg">
             </div>
-            <div class="col-lg-7 px-lg-5">
+            <div class="col-lg-7 px-lg-5 pl-4">
               <div class="content-title">
                 <h2 class="text-alexa-grey font-allura">
                   Lists of
@@ -104,20 +144,20 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid py-3 footer">
+    <div class="container-fluid py-3 footer bg-pink">
       <div class="row">
-        <div class="col-lg-1 offset-lg-3">
+        <div class="col-lg-1 offset-lg-3 col-1">
           <p class="text-gray mb-0">
             2013
           </p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-7">
           <p class="text-gray mb-0">
             created with RESERVASI DULU
           </p>
         </div>
-        <div class="offset-lg-1 col-lg-4">
-          <a class="link-footer" href="#">create a site</a> <a class="link-footer ml-lg-3" href="#">report</a>
+        <div class="offset-lg-1 col-lg-4 col-4">
+          <a class="link-footer" href="#">create a site</a>
         </div>
       </div>
     </div>
