--- a/templates/template_birthday_2/index.html
+++ b/templates/template_birthday_2/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="container-fluid nav-birthday-2">
-        <div class="row">
+        <div class="row d-none d-lg-flex">
             <div class="col-lg-5">
                 
             </div>
@@ -32,17 +32,17 @@
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#gallery">
                             ABOUT
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#date">
                             DATE & PLACE
                        </a>
                    </li>
                    <li>
-                       <a href="#">
+                       <a href="#rsvp-section">
                             RSVP
                        </a>
                    </li>
@@ -53,6 +53,46 @@
                    </li>
                </ul> 
             </div>
+        </div>
+        <div class="d-lg-none">
+          <div class="col-lg-11">
+            <h3 class="text-gray text-right mt-1">
+                <i class="fa fa-bars"></i>
+            </h3>
+          </div>
+          <div class="side-nav">
+                        <div class="close-div text-right p-3">
+                          <h3 class="text-gray">
+                            <i class="fa fa-times" aria-hidden="true"></i>
+                          </h3>
+                        </div>
+                        <ul class="list-unstyled">
+                        <li>
+                       <a href="#">
+                            HOME
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#gallery">
+                            ABOUT
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#date">
+                            DATE & PLACE
+                       </a>
+                   </li>
+                   <li>
+                       <a href="#rsvp-section">
+                            RSVP
+                       </a>
+                   </li>
+                   <li>
+                       <a href="wishlist.html">
+                            WISH LIST
+                       </a>
+                   </li>
+                    </div>
         </div>
     </div>
     <div class="container-fluid header-section py-lg-5">
@@ -79,7 +119,14 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid gallery-section">
+    <div class="container-fluid d-lg-none">
+      <div class="row">
+        <div class="col-lg-12">
+          <img class="home-ornament" src="images/mobile-home-ornament-04.png">
+        </div>
+      </div>
+    </div>
+    <div id="gallery" class="container-fluid gallery-section">
       <div class="row py-lg-5">
         <div class="col-lg-4 offset-lg-2">
           <div class="title-gallery">
@@ -111,7 +158,14 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid date-section">
+    <div class="container-fluid d-lg-none">
+      <div class="row">
+        <div class="col-lg-12">
+          <img class="about-ornament" src="images/mobile-home-about-05.png">
+        </div>
+      </div>
+    </div>
+    <div id="date" class="container-fluid date-section">
       <div class="row">
         <div class="col-lg-4 offset-lg-2 offset-2">
             <h2 class="text-white font-allura">
@@ -146,7 +200,14 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid rsvp-section">
+    <div class="container-fluid d-lg-none bg-pink">
+      <div class="row">
+        <div class="col-lg-12">
+          <img class="date-ornament" src="images/mobile-home-date-ornament-06.png">
+        </div>
+      </div>
+    </div>
+    <div id="rsvp-section" class="container-fluid rsvp-section">
       <div class="row">
         <div class="col-lg-5 offset-lg-2 offset-2">
             <h2 class="text-white font-allura">
@@ -191,20 +252,20 @@
         </div>
         </div>
       </div>
-    <div class="container-fluid py-3 footer">
+    <div class="container-fluid py-3 footer bg-pink">
       <div class="row">
-        <div class="col-lg-1 offset-lg-3">
+        <div class="col-lg-1 offset-lg-3 col-1">
           <p class="text-gray mb-0">
             2013
           </p>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 col-7">
           <p class="text-gray mb-0">
             created with RESERVASI DULU
           </p>
         </div>
-        <div class="offset-lg-1 col-lg-4">
-          <a class="link-footer" href="#">create a site</a> <a class="link-footer ml-lg-3" href="#">report</a>
+        <div class="offset-lg-1 col-lg-4 col-4">
+          <a class="link-footer" href="#">create a site</a>
         </div>
       </div>
     </div>
